--- a/order-ptimilk.css
+++ b/order-ptimilk.css
@@ -119,16 +119,14 @@
 }
 
 
-
-
 .order-block {
   padding: 10px 0 14px 0;
   margin: 0 0 18px 0;
-  border-bottom: 2px dashed #dcb6d1;
+  /* border-bottom: 2px dashed #dcb6d1; */
   position: relative;
 }
 .order-block:last-child {
-  border-bottom: none;
+  /* border-bottom: none; */
 }
 .order-row.order-flavors {
   margin-top: 4px;
