--- a/order-ptimilk.css
+++ b/order-ptimilk.css
@@ -120,8 +120,10 @@
 
 
 .order-block {
-  padding: 10px 0 14px 0;
-  margin: 0 0 18px 0;
+  /* padding: 10px 0 14px 0;
+  margin: 0 0 18px 0; */
+  padding: 5px 0 5px 5;
+  margin: 0 0 10px 0;
   /* border-bottom: 2px dashed #dcb6d1; */
   position: relative;
 }
